--- a/practice.html
+++ b/practice.html
@@ -130,6 +130,50 @@
       background-color: #e0e0e0;
     }
 
+
+    .live-status {
+      text-align: center;
+      color: #d93025;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .tabs {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 20px;
+      flex-wrap: wrap;
+    }
+    .tab {
+      padding: 6px 12px;
+      cursor: pointer;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      background: white;
+    }
+    .tab.active {
+      background: #4285f4;
+      color: white;
+      border-color: #4285f4;
+    }
+    .carousel {
+      display: flex;
+      overflow-x: auto;
+      scroll-snap-type: x mandatory;
+      scrollbar-width: none; /* Firefox */
+      -ms-overflow-style: none; /* IE 10+ */
+    }
+    .carousel::-webkit-scrollbar {
+      display: none; /* Chrome/Safari */
+    }
+    .carousel-item {
+      min-width: 100%;
+      scroll-snap-align: start;
+    }
+
+
+
+
   </style>
 </head>
 <body>
