--- a/practice.html
+++ b/practice.html
@@ -171,6 +171,13 @@
       scroll-snap-align: start;
     }
 
+        canvas {
+      width: 100% !important;
+      max-width: 600px;
+      height: 240px !important;
+      margin: 0 auto;
+    }
+
 
 
 
