--- a/practice.html
+++ b/practice.html
@@ -171,16 +171,6 @@
       scroll-snap-align: start;
     }
 
-        canvas {
-      width: 100% !important;
-      max-width: 600px;
-      height: 240px !important;
-      margin: 0 auto;
-    }
-
-
-
-
   </style>
 </head>
 <body>
@@ -209,7 +199,9 @@
     <h2>混雑傾向分析</h2>
 
 
-    
+    <div class="tabs" id="tabs"></div>
+    <div class="live-status" id="liveStatus"></div> 
+    <div class="carousel" id="carousel"></div>
     <div class="filters">
       日付: <input type="date" id="datePicker">
       時間単位: 
