--- a/practice.html
+++ b/practice.html
@@ -199,6 +199,8 @@
     <h2>混雑傾向分析</h2>
     <br>
 
+    <h2>曜日別混雑傾向</h2>
+
     <div class="tabs" id="tabs"></div>
     <div class="live-status" id="liveStatus"></div> 
     <div class="carousel" id="carousel"></div>
