--- a/practice.html
+++ b/practice.html
@@ -119,7 +119,9 @@
       border-collapse: collapse;
     }
 
-
+     h1 {
+      text-align: center;
+    }
     
     th, td {
       border: 1px solid #ccc;
@@ -196,8 +198,10 @@
   </header>
 
   <main>
-    <h2>混雑傾向分析</h2>
+    <h1>混雑傾向分析</h1>
     <br>
+    <br>
+
 
     <h2>曜日別混雑傾向</h2>
 
@@ -205,7 +209,9 @@
     <div class="live-status" id="liveStatus"></div> 
     <div class="carousel" id="carousel"></div>
     <br>
-    <br>
+    <br><br><br>
+
+
 
     <div class="filters">
       日付: <input type="date" id="datePicker">
