--- a/practice.html
+++ b/practice.html
@@ -205,14 +205,13 @@
 
     <h2>曜日別混雑傾向</h2>
 
-    <div class="tabs" id="tabs"></div>
-    <div class="live-status" id="liveStatus"></div> 
+    <div class="tabs" id="tabs"><br></div>
+    <div class="live-status" id="liveStatus"><br></div> 
     <div class="carousel" id="carousel"></div>
     <br>
     <br><br><br>
 
-
-
+    <h2>日時別混雑傾向</h2>
     <div class="filters">
       日付: <input type="date" id="datePicker">
       時間単位: 
