--- a/practice.html
+++ b/practice.html
@@ -205,8 +205,10 @@
 
     <h2>曜日別混雑傾向</h2>
 
-    <div class="tabs" id="tabs"><br></div>
-    <div class="live-status" id="liveStatus"><br></div> 
+    <br>
+    <div class="tabs" id="tabs"></div>
+    <br>
+    <div class="live-status" id="liveStatus"></div> 
     <div class="carousel" id="carousel"></div>
     <br>
     <br><br><br>
