--- a/histogram.html
+++ b/histogram.html
@@ -478,7 +478,7 @@ async function updateChartAndTable() {
         });
         renderTabs();
         renderCharts();
-        showLiveStatus();
+        //showLiveStatus();
       });
 
     function renderTabs() {
