--- a/histogram.html
+++ b/histogram.html
@@ -122,6 +122,12 @@
      h1 {
       text-align: center;
     }
+    h2 {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
+    }
     
     th, td {
       border: 1px solid #ccc;
@@ -201,10 +207,7 @@
     <h1>混雑傾向分析</h1>
     <br>
     <br>
-
-
     <h2>曜日別混雑傾向</h2>
-
     <br>
     <div class="tabs" id="tabs"></div>
     <br>
