--- a/admin.html
+++ b/admin.html
@@ -106,6 +106,13 @@
       text-align: center;
       padding: 20px;
     }
+
+     h2 {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
+    }
     .queue-item {
       background: #fff;
       padding: 15px;
@@ -152,7 +159,8 @@
       <a href="admin.html">待ち管理</a>
     </div>
   </header>
-  <h1 style="display:none;" id="mainTitle">順番待ち管理（店員用）</h1>
+  <h1 style="display:none;" id="mainTitle">順番待ち管理</h1>
+  <h2>順番一覧</h2>
   <div id="queueList"></div>
 
   <script>
