--- a/admin.html
+++ b/admin.html
@@ -154,7 +154,7 @@
     </div>
     <div class="drawer">
       <a href="index.html">ホーム</a>
-      <a href="map.html">店内マップ</a>
+      <a href="table.html">テーブル管理</a>
       <a href="histogram.html">混雑状況可視化</a>
       <a href="admin.html">待ち管理</a>
     </div>
