--- a/admin.html
+++ b/admin.html
@@ -161,7 +161,9 @@
     </div>
   </header>
   <h1 style="display:none;" id="mainTitle">順番待ち管理</h1>
+  <section>
   <h2>順番一覧</h2>
+  </section>
   <div id="queueList"></div>
 
   <script>
