--- a/admin.html
+++ b/admin.html
@@ -112,6 +112,8 @@
       margin-bottom: 10px;
       border-bottom: 2px solid #2c3e50;
       padding-bottom: 5px;
+      text-align: center;
+
     }
 
     .queue-item {
