--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
       <a href="table.html">テーブル管理</a>
       <a href="histogram.html">混雑状況可視化</a>
       <a href="admin.html">待ち管理</a>
+      <a href="admin.html">待ち管理</a>
     </div>
   </header>
 
